Only select a created item and make it 'current' in the active view

The 'make the new item the current one in all views' issue has been
around for quite some time, the unexpected selection was a recent
regression caused by commit b25059e803e7eed54f0593605a4066882d63bce2.

Thanks to Jaime Torres for finding the regression early and for testing
this patch!

BUG: 310219
FIXED-IN: 4.9.4